# monero

./: .gitignore  CMakeLists.txt  CMakeLists_MacOS.txt  CMakeLists_v1.txt  README.md  _CMakeLists.txt
.github/workflows/: build.yml
build_scripts/android/: build_all.sh  build_boost.sh  build_iconv.sh  build_monero.sh  build_monero_ffi.sh  build_moneroffi.sh  build_openssl.sh  build_sodium.sh  build_unbound.sh  build_zmq.sh  config.sh  copy_monero_deps.sh  finish_boost.sh  init_boost.sh  install_ndk.sh  prepare_system.sh  prepare_system_and_build_all.sh
build_scripts/ios/: boost-script.patch  build_all.sh  build_boost.sh  build_monero.sh  build_monero_ffi.sh  build_moneroffi.sh  build_openssl.sh  build_sodium.sh  build_unbound.sh  build_zmq.sh  install_missing_headers.sh  make_dirs.sh  prepare_system.sh  setup.sh
build_scripts/macos/: build_all.sh  build_boost_common.sh  build_sodium.sh  build_zmq.sh  config.sh  rebuild_and_install_monero.sh
build_scripts/macos-custom/: build_all.sh  build_expat.sh  build_monero.sh  build_openssl_common.sh  build_unbound.sh  setup.sh
contrib/epee/include/serialization/: keyvalue_serialization.h  keyvalue_serialization_overloads.h
src/: CMakeLists.txt  extended_monero_wallet.cpp  extended_monero_wallet.hpp  ffi_utils.cpp  ffi_utils.hpp  monero_app.cpp  monero_ffi.cpp  monero_ffi.h  monero_ffi.hpp  monero_flutter.cpp  monero_flutter.h  wallet_listener.cpp  wallet_listener.hpp
src/cryptonote_basic/: cryptonote_basic.h
src/daemon/: CMakeLists.txt
src/simplewallet/: CMakeLists.txt  simplewallet.cpp
src/utils/: CMakeLists.txt
src/wallet/: CMakeLists.txt  monero_daemon_model.cpp  monero_utils.h  monero_wallet_full.cpp  monero_wallet_full.h  monero_wallet_keys.cpp  monero_wallet_model.h  wallet2.cpp  wallet2.h
src/wallet/api/: wallet.cpp  wallet.h  wallet2_api.h  wallet_manager.cpp  wallet_manager.h
src/wallet/monero_ecosystem/: monero_wallet_full.cpp  monero_wallet_full.h  monero_wallet_model.cpp  monero_wallet_model.h
